--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "jquery-gettable",
   "version": "0.2.2",
-  "title": "getTable",
   "description": "The simple jQuery Plugin for easy getting table cells that is positioned on horizontal line, vertical line or both lines that passes through the target cell.",
   "keywords": [
     "jquery-plugin",
@@ -15,6 +14,7 @@
     "tr",
     "td"
   ],
+  "main": "jquery.gettable.min.js",
   "dependencies": {
     "jquery": ">=1.8"
   },
@@ -23,10 +23,18 @@
     "type": "git",
     "url": "git://github.com/anseki/jquery-gettable.git"
   },
-  "bugs": "https://github.com/anseki/jquery-gettable/issues",
-  "licenses": "MIT",
-  "author": {
-    "name": "anseki",
-    "url": "https://github.com/anseki"
-  }
+  "moduleType": [
+    "es6"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "license": "MIT",
+  "authors": [
+    "anseki <AnSeki.aff@gmail.com>"
+  ]
 }
