--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-gettable",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "title": "getTable",
   "description": "The simple jQuery Plugin for easy getting table cells that is positioned on horizontal line, vertical line or both lines that passes through the target cell.",
   "keywords": [
@@ -25,7 +25,7 @@
     "url": "git://github.com/anseki/jquery-gettable.git"
   },
   "bugs": "https://github.com/anseki/jquery-gettable/issues",
-  "licenses": "MIT",
+  "license": "MIT",
   "author": {
     "name": "anseki",
     "url": "https://github.com/anseki"
