--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "jquery": ">=1.8"
   },
-  "homepage": "http://anseki.github.io/jquery-gettable/",
+  "homepage": "https://anseki.github.io/jquery-gettable/",
   "repository": {
     "type": "git",
     "url": "git://github.com/anseki/jquery-gettable.git"
