Rename: LICENSE-MIT => LICENSE

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "files": [
     "jquery.gettable.min.js",
     "bower.json",
-    "gettable.jquery.json",
-    "LICENSE-MIT"
+    "gettable.jquery.json"
   ],
   "dependencies": {
     "jquery": ">=3.0"
